# nomero

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: setup-build-publish.yml
k6/: load.ts
k8s/: deployment.yml  hpa.yml  ingress.yml  pod.yml  service.yml
src/: main.rs
