[package]
name = "nomero"
version = "0.1.0"
edition = "2018"
authors = ["Guilherme Pellizzetti <guipellizzetti@gmail.com>"]
repository = "https://github.com/pellizzetti/nomero/"
description = """
No-code, composable, enterprise-grade fibonacci solver backed by blockchain, quantum computing and AI.
"""
license = "MIT OR Apache-2.0"

[dependencies]
rocket = "0.4.10"
rocket_healthz = "0.2.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
